--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="content">
                 <h1 data-aos="fade-left" data-aos-duration="1500" data-aos-delay="700">Hai I'm <span>Kaizen</span></h1>
                 <div class="typewriter" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="900">I'm a <span class="typewriter-text"></span><label for="">|</label></div>
-                <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit quasi commodi quia rerum, iste corporis expedita in excepturi nesciunt repellendus quisquam amet provident ad mollitia debitis odit voluptatem necessitatibus tempora.</p>
+                <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">Kaizen is a student at Wirakarya Vocational School, he majors in automotive but doesn't know why he is smarter in the field of computers and he also learns to deepen his knowledge about computers.</p>
                 <div class="social-links">
                     <a href="https://github.com/KaizDevs" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
                     <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-facebook"></i></a>
