--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <a href="https://wa.me/6285695080949"> <i class='bx bxl-whatsapp' style="--vlr:7"></i> </a>
+        <a href="https://wa.me/6285695080949.com"> <i class='bx bxl-whatsapp' style="--vlr:7"></i> </a>
         <a href="https://github.com/KaizDevs"><i class='bx bxl-github' style="--vlr:8"></i></a>
         <a href="https://www.instagram.com/kzvann?igsh=MXgwcTBhaGNjNzEzcQ=="><i class='bx bxl-instagram' style="--vlr:9"></i></a>
             </div>
